--- a/funcionarios.html
+++ b/funcionarios.html
@@ -5,7 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="icon" type="image/x-icon" href="/assets/imgs/favicon-32x32.png">
             <link rel="stylesheet" href="css/style.css">
-            <title>QUADRO DE FUNCIONÁRIOS</title>
+            <title>QUADRO DE HORÁRIOS</title>
         </head>
         <body>
             <header>
@@ -21,7 +21,7 @@
                 <ul class="navBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
-                    <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="funcionarios.html">QUADRO DE HORÁRIOS</a></li>
                     <li><a href="cardapio.html">CARDÁPIO</a></li>
                     <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
                     <li><a href="projetos.html">PROJETOS</a></li>
@@ -47,7 +47,7 @@
                 <ul class="footerBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
-                    <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="funcionarios.html">QUADRO DE HORÁRIOS</a></li>
                     <li><a href="cardapio.html">CARDÁPIO</a></li>
                     <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
                     <li><a href="projetos.html">PROJETOS</a></li>
