--- a/projetos.html
+++ b/projetos.html
@@ -21,7 +21,7 @@
                 <ul class="navBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
-                    <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="funcionarios.html">QUADRO DE HORÁRIOS</a></li>
                     <li><a href="cardapio.html">CARDÁPIO</a></li>
                     <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
                     <li><a href="projetos.html">PROJETOS</a></li>
@@ -38,7 +38,7 @@
                 <ul class="footerBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
-                    <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="funcionarios.html">QUADRO DE HORÁRIOS</a></li>
                     <li><a href="cardapio.html">CARDÁPIO</a></li>
                     <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
                     <li><a href="projetos.html">PROJETOS</a></li>
