--- a/transparencia.html
+++ b/transparencia.html
@@ -21,7 +21,7 @@
                 <ul class="navBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
-                    <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="funcionarios.html">QUADRO DE HORÁRIOS</a></li>
                     <li><a href="cardapio.html">CARDÁPIO</a></li>
                     <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
                     <li><a href="projetos.html">PROJETOS</a></li>
@@ -29,25 +29,53 @@
                     <li><a href="contato.html">CONTATO</a></li>
                 </ul>
             </nav>
-            <main>
+            <main class="mainTransparencia">
+                <ul>
+                    <li><a href="contas">PRESTAÇÃO DE CONTAS</a></li>
+                    <li><a href="normas">NORMAS DE CONVIVÊNCIA</a></li>
+                    <li><a href="horarios">HORÁRIOS DE FUNCIONAMENTO</a></li>
+                    <li><a href="apm">APM</a></li>
+                    <li><a href="legal">LEGISLAÇÃO</a></li>
+                    <li><a href="patrimonio">PATRIMÔNIO</a></li>
+                </ul>
                 <article>
-                    <section>
-                        <h1>TRANSPARENCIA</h1>
+                    <section id="contas">
+                        <h1>PRESTAÇÃO DE CONTAS</h1>
                     </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
+                    <section id="normas">
+                        <h1>NORMAS DE CONVIVÊNCIA</h1>
                     </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores dolores dolore nisi, nobis cum natus porro qui non est, libero perspiciatis ab fugiat ut, assumenda iure maxime earum aperiam.
+                    <section id="horarios">
+                        <h1>HORARIO DE FUNCIONAMENTO</h1>
                     </section>
-                    
+                    <section id="apm">
+                        <h1>APM</h1>
+                    </section>
+                    <section id="legal">
+                        <h1>LEGISLAÇÃO</h1>
+                        <h2>PORTARIAS</h2>
+                        <div class="portarias">
+                            <h3>DEMANDA ESCOLAR</h3>
+                            <span>Portaria que regula as matrículas das escolas municipais</span>
+                            <a href="https://drive.google.com/file/d/1YzlEhV7P_CztMVKHNNQJhojcQcgAF0K0/view?usp=sharing">DEMANDA ESCOLAR 2025</a>
+                            <span>Portarias de anos anteriores</span>
+                            <h4>DEMANDA ESCOLAR ANOS ANTERIORES</h4>
+                            <a href="https://drive.google.com/file/d/1AcNSpsHVs4VfJ2OAMJZIGCt0BsE_Cu8Y/view?usp=sharing">DEMANDA ESCOLAR 2024</a>
+                            <a href="https://drive.google.com/file/d/1hek6IDvm-Lhy46Ll-S9t7TjJqN0363xK/view?usp=sharing">DEMANDA ESCOLAR 2023</a>
+                            <a href="https://drive.google.com/file/d/1D60kpVOsk0Bfg_hR_9X0gKw8RBTTkXHt/view?usp=sharing">DEMANDA ESCOLAR 2022</a>
+                            <a href="https://drive.google.com/file/d/1G-tj19aW215w7sQJA0UJULkHpMUTbga4/view?usp=sharing">DEMANDA ESCOLAR 2021</a>
+                        </div>
+                    </section>
+                    <section id="patrimonio">
+                        <h1>PATRIMONIO</h1>
+                    </section>                    
                 </article>
             </main>
             <footer>
                 <ul class="footerBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
-                    <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="funcionarios.html">QUADRO DE HORÁRIOS</a></li>
                     <li><a href="cardapio.html">CARDÁPIO</a></li>
                     <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
                     <li><a href="projetos.html">PROJETOS</a></li>
@@ -63,5 +91,5 @@
                 </div>
             </footer>
         </body>
-        <script src="js/script.js"></script>
+        <script src="js/transparenciaScript.js"></script>
     </html>
