--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
                 <ul class="navBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
-                    <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="funcionarios.html">QUADRO DE HORÁRIOS</a></li>
                     <li><a href="cardapio.html">CARDÁPIO</a></li>
                     <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
                     <li><a href="projetos.html">PROJETOS</a></li>
@@ -66,7 +66,7 @@
                 <ul class="footerBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
-                    <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
+                    <li><a href="funcionarios.html">QUADRO DE HORÁRIOS</a></li>
                     <li><a href="cardapio.html">CARDÁPIO</a></li>
                     <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
                     <li><a href="projetos.html">PROJETOS</a></li>
