quadro de horarios e transparencia

--- a/funcionarios.html
+++ b/funcionarios.html
@@ -30,17 +30,27 @@
                 </ul>
             </nav>
             <main>
-                <article>
-                    <section>
-                        <h1>FUNCIONARIOS</h1>
+                <article class="articleFuncionarios">
+                    <section class="funcionariosSection">
+                        <h1>FUNCIONÁRIOS</h1>
+                        <table id="tabelaHorarios">
+                            <thead>
+                                <tr>
+                                    <th>ODR.</th>
+                                    <th>Funcionário</th>
+                                    <th>Cargo</th>
+                                    <th>Entrada</th>
+                                    <th>Almoço (ida)</th>
+                                    <th>Almoço (Volta)</th>
+                                    <th>Saída</th>
+                                    <th>H.T.P.C. ENTRADA (TERÇA-FEIRA)</th>
+                                    <th>H.T.P.C. SAÍDA (TERÇA-FEIRA)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
                     </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
-                    </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores dolores dolore nisi, nobis cum natus porro qui non est, libero perspiciatis ab fugiat ut, assumenda iure maxime earum aperiam.
-                    </section>
-                    
                 </article>
             </main>
             <footer>
@@ -63,5 +73,5 @@
                 </div>
             </footer>
         </body>
-        <script src="js/script.js"></script>
+        <script src="js/funcionariosScript.js"></script>
     </html>
