--- a/transparencia.html
+++ b/transparencia.html
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
             <main class="mainTransparencia">
-                <ul>
+                <ul class="sub-menu">
                     <li><a href="contas">PRESTAÇÃO DE CONTAS</a></li>
                     <li><a href="normas">NORMAS DE CONVIVÊNCIA</a></li>
                     <li><a href="horarios">HORÁRIOS DE FUNCIONAMENTO</a></li>
@@ -43,7 +43,58 @@
                         <h1>PRESTAÇÃO DE CONTAS</h1>
                     </section>
                     <section id="normas">
-                        <h1>NORMAS DE CONVIVÊNCIA</h1>
+                        <h1>NORMAS DE CONVIVÊNCIA - EXERCÍCIO DE 2024</h1>
+                        <div class="normasPingo">
+                            <p class="destaque">ENTRADA/SAÍDA DOS ALUNOS SOMENTE PELO PORTÃO PEQUENO/FRENTE (PARA CONTROLE DOS FUNCIONÁRIOS)</p>
+                            <p><strong>HORÁRIO DE ENTRADA:</strong></p>
+                            <ul>
+                                <li>O horário de ENTRADA no período da manhã é às 07H00. O portão será TRANCADO às 7H10. NÃO HÁ TOLERÂNCIA!</li>
+                                <li>O horário de ENTRADA no período da manhã é às 07H00. O portão será TRANCADO às 7H10. NÃO HÁ TOLERÂNCIA!</li>
+                                <li>O horário de ENTRADA no período da tarde é as 12H30. O portão será TRANCADO às 12H40. NÃO HÁ TOLERÂNCIA!</li>
+                            </ul>
+                            <p><strong>NÃO SERÁ PERMITIDA A ENTRADA APÓS AS 07H10 OU 12H40.</strong></p>
+                            <p><strong>HORÁRIO DE SAÍDA:</strong></p>
+                            <ul>
+                                <li>Educação infantil (Jardim):</li>
+                                <ul>
+                                    <li>Manhã: O horário de saída é a partir das 11H30;</li>
+                                    <li>Tarde: O horário de saída é a partir das 17H00.</li>
+                                </ul>
+                                <li>Ensino fundamental (1º ao 5º ano):</li>
+                                <ul>
+                                    <li>Manhã: O horário de saída é a partir das 11H45;</li>
+                                    <li>Tarde: O horário de saída é a partir das 17H15.</li>
+                                </ul>
+                            </ul>
+                            <p><strong>OBS: OS RESPONSÁVEIS ENTREGAM E RETIRAM AS CRIANÇAS NO PORTÃO DA ESCOLA COM O (A) FUNCIONÁRIO (A).</strong></p>
+                            <ul>
+                                <li>Se houver necessidade de conversar com o professor da sala, enviar bilhete no caderno/caderneta para assuntos corriqueiros ou em casos extremos procurar a Coordenação/Direção para agendamento de horário;</li>
+                                <li>A partir da 2ª incidência de atraso o responsável será convocado na secretaria para esclarecimentos e assinatura de ata de ocorrência, assim como nas saídas antes do horário de término da aula, na 3ª incidência não será liberado a entrada.</li>
+                                <li>A escola fecha às 12H00 (manhã) e 17H30 (tarde), portanto esse é o horário limite de saída das crianças, observando que o atraso pode acarretar em prejuízos emocionais à criança e atrapalha o andamento dos trabalhos da escola. Garantir a assiduidade e pontualidade nas atividades da escola.</li>
+                                <li>Em casos de consultas médicas ou laboratoriais será permitida a entrada desde que comprovadas com declaração de comparecimento/atestado e se for avisado com antecedência.</li>
+                                <li>Não é permitida a volta da criança à escola no mesmo dia, se retirada no meio do expediente, por qualquer que seja o motivo.</li>
+                                <li>A criança só sairá da escola com o responsável ou alguém que estiver autorizada na ficha da criança. A pessoa deverá trazer o documento com foto para comprovação.</li>
+                                <li>Comunicar a escola o motivo das faltas por escrito explicando o motivo ou declaração/atestado médico para que as mesmas sejam justificadas, lembrando que para quem recebe Bolsa Família deve comprovar 85% presença/mês.</li>
+                                <li>Havendo 3 faltas consecutivas, 5 intercaladas, no caso de não haver justificativa por parte do responsável, haverá:</li>
+                                <ul>
+                                    <li>Contato telefônico;</li>
+                                    <li>Não sendo encontrado o responsável o caso será encaminhado ao Conselho Tutelar e à Secretaria de Educação. Qualquer falta deve ser justificada.</li>
+                                </ul>
+                                <li>Todo o material de uso pessoal da criança deverá estar IDENTIFICADO COM O NOME DA CRIANÇA. A escola se isenta de qualquer responsabilidade referente ao desaparecimento de objetos e vestimentas não identificadas.</li>
+                                <li>Os brinquedos deverão vir somente quando for pedido pela ESCOLA através da agenda. Os brinquedos também deverão vir identificados com o nome e turma da criança. NÃO SERÃO PERMITIDOS BRINQUEDOS QUE ESTIMULEM A VIOLÊNCIA.</li>
+                                <li>Toda a alimentação da criança será dada pela escola. Por isso não permitimos entrada de balas, doces, biscoitos ou qualquer outro alimento. Se a criança possuir algum problema de intolerância alimentar ou uma dieta especial, os responsáveis deverão trazer do pediatra/médico o laudo e o cardápio da criança para ser substituído. A escola faz um trabalho de incentivo à alimentação saudável durante a merenda servida nas unidades.</li>
+                                <li>SEMPRE manter atualizado os endereços, telefones para contato e pessoas autorizadas para retirar o aluno (a).</li>
+                                <li>Os pais ou responsáveis pelos alunos, como participantes do processo educativo, têm direito à informação sobre sua vida escolar, bem como o direito de apresentar sugestões e críticas quanto ao processo educativo, principalmente através das Reuniões de Pais e Mestres ou agendamento com Direção/Coordenação para esclarecimentos.</li>
+                                <li>Como não temos profissionais da saúde na escola, qualquer aparecimento de febre, vômito, diarreia, erupção na pele, piolho ou algum outro sintoma que nos preocupe e que possa ser transmitido para outras crianças, chamaremos IMEDIATAMENTE o responsável da criança. Esta só poderá retornar à escola, mediante atestado médico liberando a criança para frequentar normalmente. Em caso de febre, a criança só poderá retornar dentro de 24H sem o sintoma, no caso de piolho poderá frequentar após 3 dias e com a cabeça limpa e atestado liberando para frequentar a escola.</li>
+                                <li>Ter cuidado com a higiene das unhas e cabelos.</li>
+                                <li>Os medicamentos só poderão ser administrados pelos responsáveis. Não podemos viabilizar nebulizações, remédios homeopáticos, cujas doses sejam de intervalos curtos, além de vitaminas, estimulantes de apetite e ou exame de fezes e urina.</li>
+                                <li>Em caso da necessidade da retirada do aluno por menor, os pais ou responsáveis deverão fazer uma autorização junto à coordenação ou direção.</li>
+                                <li>Os cadernos/atividades/cadernetas da criança devem ser vistados todos os dias.</li>
+                                <li>Os casos de indisciplinas a escola juntamente com o Conselho de Escola tomarão as medidas cabíveis.</li>
+                                <li>Solicitação de declarações devem ser feitas na secretaria da escola ou pelo telefone ou pelo Whatsapp da escola 3822-5152 (horário de funcionamento da Secretaria da Escola das 08H00 às 12H00 e das 13H00 às 17H00).</li>
+                            </ul>
+                        </div>
+                        <a href="https://drive.google.com/file/d/1QnHj5Zoyfpi-dz7IjzxxuaiTUdbyYJro/view?usp=sharing" target="_blank">NORMAS DE CONVIVÊNCIA - EXERCÍCIO DE 2024</a>
                     </section>
                     <section id="horarios">
                         <h1>HORARIO DE FUNCIONAMENTO</h1>
@@ -55,15 +106,20 @@
                         <h1>LEGISLAÇÃO</h1>
                         <h2>PORTARIAS</h2>
                         <div class="portarias">
-                            <h3>DEMANDA ESCOLAR</h3>
-                            <span>Portaria que regula as matrículas das escolas municipais</span>
-                            <a href="https://drive.google.com/file/d/1YzlEhV7P_CztMVKHNNQJhojcQcgAF0K0/view?usp=sharing">DEMANDA ESCOLAR 2025</a>
-                            <span>Portarias de anos anteriores</span>
-                            <h4>DEMANDA ESCOLAR ANOS ANTERIORES</h4>
-                            <a href="https://drive.google.com/file/d/1AcNSpsHVs4VfJ2OAMJZIGCt0BsE_Cu8Y/view?usp=sharing">DEMANDA ESCOLAR 2024</a>
-                            <a href="https://drive.google.com/file/d/1hek6IDvm-Lhy46Ll-S9t7TjJqN0363xK/view?usp=sharing">DEMANDA ESCOLAR 2023</a>
-                            <a href="https://drive.google.com/file/d/1D60kpVOsk0Bfg_hR_9X0gKw8RBTTkXHt/view?usp=sharing">DEMANDA ESCOLAR 2022</a>
-                            <a href="https://drive.google.com/file/d/1G-tj19aW215w7sQJA0UJULkHpMUTbga4/view?usp=sharing">DEMANDA ESCOLAR 2021</a>
+                            <div class="colOne">
+                                <h3>DEMANDA ESCOLAR</h3>
+                                <span>Portaria que regula as matrículas das escolas municipais</span>
+                                <a href="https://drive.google.com/file/d/1YzlEhV7P_CztMVKHNNQJhojcQcgAF0K0/view?usp=sharing" target="_blank">DEMANDA ESCOLAR PARA O ANO LETIVO DE 2025</a>
+                            </div>
+                            <div class="colTwo">
+                                <h4>DEMANDA ESCOLAR ANOS ANTERIORES</h4>
+                                <span>Portarias de anos anteriores</span>                            
+                                <a href="https://drive.google.com/file/d/1AcNSpsHVs4VfJ2OAMJZIGCt0BsE_Cu8Y/view?usp=sharing" target="_blank">DEMANDA ESCOLAR PARA O ANO LETIVO DE 2024</a>
+                                <a href="https://drive.google.com/file/d/1hek6IDvm-Lhy46Ll-S9t7TjJqN0363xK/view?usp=sharing" target="_blank">DEMANDA ESCOLAR PARA O ANO LETIVO DE 2023</a>
+                                <a href="https://drive.google.com/file/d/1D60kpVOsk0Bfg_hR_9X0gKw8RBTTkXHt/view?usp=sharing" target="_blank">DEMANDA ESCOLAR PARA O ANO LETIVO DE 2022</a>
+                                <a href="https://drive.google.com/file/d/1G-tj19aW215w7sQJA0UJULkHpMUTbga4/view?usp=sharing" target="_blank">DEMANDA ESCOLAR PARA O ANO LETIVO DE 2021</a>
+                            </div>
+                            
                         </div>
                     </section>
                     <section id="patrimonio">
